--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Clube de Programação UPF
 description: Treinando alunos para competições de programação
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: http://maratona.ime.usp.br/imagens/logomdp.jpg
+avatar: 
 
 #
 # Flags below are optional
