--- a/_config.yml
+++ b/_config.yml
@@ -55,6 +55,7 @@ baseurl: ""
 
 permalink: /:categories/:title
 paginate: 5
+paginate_path: "/blog/page-:num/"
 
 # The release of Jekyll Now that you're using
 version: v1.2.0
