--- a/_config.yml
+++ b/_config.yml
@@ -78,6 +78,7 @@ sass:
 gems:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
+  - jekyll-paginate # Create an Atom feed using the official Jekyll feed gem
 
 # Exclude these files from your production _site
 exclude:
