--- a/_config.yml
+++ b/_config.yml
@@ -56,6 +56,7 @@ baseurl: ""
 permalink: /:categories/:title
 paginate: 5
 paginate_path: "/blog/page-:num/"
+excerpt_separator: "\n\n\n"
 
 # The release of Jekyll Now that you're using
 version: v1.2.0
